--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -1,7 +1,7 @@
 absl-py==1.1.0
 asgiref==3.5.2
 astunparse==1.6.3
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 bidict==0.22.0
 cachetools==5.2.0
 certifi==2022.6.15
