--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -39,8 +39,8 @@ tensorboard==2.9.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow-cpu==2.9.1
-tensorflow-cpu-estimator==2.9.0
-tensorflow-cpu-io-gcs-filesystem==0.26.0
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
 typing_extensions==4.3.0
 urllib3==1.26.10
