--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -1,18 +1,24 @@
 absl-py==1.1.0
+asgiref==3.5.2
+astunparse==1.6.3
 backports.zoneinfo==0.2.1;python_version<"3.9"
+bidict==0.22.0
 cachetools==5.2.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
+Django==4.0.6
 Flask==2.1.3
 Flask-SocketIO==5.2.0
 flatbuffers==1.12
+gast==0.4.0
 google-auth==2.9.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.47.0
 gunicorn==20.1.0
 h5py==3.7.0
+idna==3.3
 image==1.5.33
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
@@ -20,10 +26,12 @@ Jinja2==3.1.2
 keras==2.9.0
 Keras-Preprocessing==1.1.2
 libclang==14.0.1
+Markdown==3.3.7
 MarkupSafe==2.1.1
 numpy==1.23.1
 oauthlib==3.2.0
 opencv-python==4.6.0.66
+opt-einsum==3.3.0
 packaging==21.3
 Pillow==9.2.0
 protobuf==3.19.4
@@ -35,6 +43,8 @@ python-socketio==5.7.0
 requests==2.28.1
 requests-oauthlib==1.3.1
 rsa==4.8
+six==1.16.0
+sqlparse==0.4.2
 tensorboard==2.9.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -45,3 +55,5 @@ termcolor==1.1.0
 typing_extensions==4.3.0
 urllib3==1.26.10
 Werkzeug==2.1.2
+wrapt==1.14.1
+zipp==3.8.1
