--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -8,13 +8,18 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 Django==4.0.6
+dnspython==2.2.1
+eventlet==0.33.1
 Flask==2.1.3
 Flask-SocketIO==5.2.0
 flatbuffers==1.12
 gast==0.4.0
+gevent==21.12.0
+gevent-websocket==0.10.1
 google-auth==2.9.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+greenlet==1.1.2
 grpcio==1.47.0
 gunicorn==20.1.0
 h5py==3.7.0
@@ -57,3 +62,5 @@ urllib3==1.26.10
 Werkzeug==2.1.2
 wrapt==1.14.1
 zipp==3.8.1
+zope.event==4.5.0
+zope.interface==5.4.0
