--- a/web-interface/Procfile
+++ b/web-interface/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn --worker-class eventlet -w 1 app:process
+web: gunicorn -k geventwebsocket.gunicorn.workers.GeventWebSocketWorker -w 1 process:app
