--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -2,7 +2,7 @@ Flask==2.1.3
 Flask_SocketIO==5.2.0
 keras==2.9.0
 numpy==1.23.1
-opencv_python==4.6.0.66
+opencv-contrib-python-headless
 Pillow==9.2.0
 python_engineio==4.3.3
 tensorflow-cpu==2.9.1
