--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 absl-py==1.0.0
 astunparse==1.6.3
 attrs==19.3.0
@@ -75,9 +76,6 @@ pyparsing==2.4.7
 pyRFC3339==1.1
 pyrsistent==0.15.5
 pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.7
-python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
 python-engineio==4.3.3
 python-socketio==5.7.0
 pytz==2022.1
@@ -107,8 +105,8 @@ tensorboard-plugin-wit==1.8.1
 termcolor==1.1.0
 threadpoolctl==3.1.0
 tifffile==2022.5.4
-torch==1.12.0
-torchvision==0.13.0
+torch==1.12.0+cpu
+torchvision==0.13.0+cpu
 tqdm==4.64.0
 Twisted==18.9.0
 typing-extensions==4.3.0
