--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -9,7 +9,7 @@ cachetools==5.2.0
 celluloid==0.2.0
 certifi==2019.11.28
 chardet==3.0.4
-click==7.1.2
+click>=8.0
 colorama==0.4.3
 configobj==5.0.6
 constantly==15.1.0
