--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -27,7 +27,6 @@ h5py==3.7.0
 httplib2==0.14.0
 hyperlink==19.0.0
 idna==2.8
-imageio==2.19.3
 importlib-metadata==4.12.0
 incremental==16.10.1
 itsdangerous==2.1.2
@@ -57,7 +56,7 @@ opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.3
 pexpect==4.6.0
-Pillow==8.3.2
+Pillow>=6.2.0
 platformdirs==2.5.2
 protobuf==3.19.4
 py-feat==0.4.0
