--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -18,6 +18,7 @@ Flask==2.1.2
 Flask-SocketIO==5.2.0
 flatbuffers==1.12
 gast==0.4.0
+gobject-introspection-1.0>=1.46.0
 google-auth==2.9.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
