--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -1,102 +1,79 @@
--f https://download.pytorch.org/whl/torch_stable.html
-absl-py==1.0.0
+absl-py==1.1.0
+asgiref==3.5.2
 astunparse==1.6.3
-attrs==19.3.0
-Automat==0.8.0
+backports.zoneinfo==0.2.1
 bidict==0.22.0
-blinker==1.4
 cachetools==5.2.0
 celluloid==0.2.0
-certifi==2019.11.28
-chardet==3.0.4
-click>=8.0
-colorama==0.4.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.8
-Flask==2.1.2
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click
+cycler==0.11.0
+deepdish==0.3.7
+Django==4.0.6
+dnspython==2.2.1
+docopt==0.6.2
+easing-functions==1.0.4
+Flask==2.1.3
 Flask-SocketIO==5.2.0
 flatbuffers==1.12
+fonttools==4.34.4
 gast==0.4.0
-libgirepository1.0-dev
-google-auth==2.9.0
+gevent==21.12.0
+gevent-websocket==0.10.1
+google-auth==2.9.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+greenlet==1.1.2
 grpcio==1.47.0
 gunicorn==20.1.0
 h5py==3.7.0
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==2.8
+idna==3.3
+image==1.5.33
+imageio==2.19.5
 importlib-metadata==4.12.0
-incremental==16.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.1.0
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-kiwisolver==1.3.2
+kiwisolver==1.4.4
+libclang==14.0.1
 lxml==4.9.1
 Markdown==3.3.7
 MarkupSafe==2.1.1
-matplotlib==3.4.3
-mediapipe==0.8.10
-more-itertools==4.2.0
-netifaces==0.10.4
+matplotlib==3.5.2
 networkx==2.8.4
 nibabel==4.0.1
 nilearn==0.9.1
 nltools==0.4.5
 numexpr==2.8.3
-numpy==1.21.2
-oauthlib==3.1.0
+numpy==1.23.1
+oauthlib==3.2.0
 opencv-contrib-python-headless
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.3
-pexpect==4.6.0
-Pillow>=6.2.0
-platformdirs==2.5.2
+Pillow==9.2.0
+pipreqs==0.4.11
 protobuf==3.19.4
 py-feat==0.4.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycairo==1.16.2
-pycups==1.9.73
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pynv==0.2
-pyOpenSSL==19.0.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pyrsistent==0.15.5
-pyserial==3.4
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-engineio==4.3.3
 python-socketio==5.7.0
 pytz==2022.1
 PyWavelets==1.3.0
-PyYAML==5.3.1
-redis==3.3.11
-requests==2.22.0
+requests==2.28.1
 requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
-rq==1.2.2
 rsa==4.8
 scikit-image==0.19.3
 scikit-learn==1.1.1
 scipy==1.8.1
 seaborn==0.11.2
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-six==1.14.0
-ssh-import-id==5.10
-systemd-python==234
+six==1.16.0
+sqlparse==0.4.2
 tables==3.7.0
 tensorboard==2.9.1
 tensorboard-data-server==0.6.1
@@ -107,11 +84,11 @@ tifffile==2022.5.4
 torch==1.12.0+cpu
 torchvision==0.13.0+cpu
 tqdm==4.64.0
-Twisted==18.9.0
-typing-extensions==4.3.0
-urllib3==1.25.8
-wadllib==1.3.3
+typing_extensions==4.3.0
+urllib3==1.26.10
 Werkzeug==2.1.2
 wrapt==1.14.1
-zipp==1.0.0
-zope.interface==4.7.1
+yarg==0.1.9
+zipp==3.8.1
+zope.event==4.5.0
+zope.interface==5.4.0
