--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -1,87 +1,10 @@
--f https://download.pytorch.org/whl/torch_stable.html
-absl-py==1.1.0
-asgiref==3.5.2
-astunparse==1.6.3
-backports.zoneinfo==0.2.1
-bidict==0.22.0
-cachetools==5.2.0
-celluloid==0.2.0
-certifi==2022.6.15
-charset-normalizer==2.1.0
-click
-cycler==0.11.0
-deepdish==0.3.7
-Django==4.0.6
-dnspython==2.2.1
-docopt==0.6.2
-easing-functions==1.0.4
+feat==1.0.5
 Flask==2.1.3
-Flask-SocketIO==5.2.0
-flatbuffers==1.12
-fonttools==4.34.4
-gast==0.4.0
+Flask_SocketIO==5.2.0
+numpy==1.23.1
+Pillow==9.2.0
+py_feat==0.4.0
+python_engineio==4.3.3
 gevent==21.12.0
 gevent-websocket==0.10.1
-google-auth==2.9.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==1.1.2
-grpcio==1.47.0
 gunicorn==20.1.0
-h5py==3.7.0
-idna==3.3
-importlib-metadata==4.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.1.0
-kiwisolver==1.4.4
-libclang==14.0.1
-lxml==4.9.1
-Markdown==3.3.7
-MarkupSafe==2.1.1
-matplotlib==3.5.2
-networkx==2.8.4
-nibabel==4.0.1
-nilearn==0.9.1
-nltools==0.4.5
-numexpr==2.8.3
-numpy==1.23.1
-oauthlib==3.2.0
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.4.3
-Pillow==9.2.0
-protobuf==3.19.4
-py-feat==0.4.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pynv==0.2
-pyparsing==3.0.9
-python-dateutil==2.8.2
-python-engineio==4.3.3
-python-socketio==5.7.0
-pytz==2022.1
-PyWavelets==1.3.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.8
-scikit-image==0.19.3
-scikit-learn==1.1.1
-scipy==1.8.1
-six==1.16.0
-sqlparse==0.4.2
-tables==3.7.0
-termcolor==1.1.0
-threadpoolctl==3.1.0
-tifffile==2022.5.4
-torch==1.12.0+cpu
-torchvision==0.13.0+cpu
-tqdm==4.64.0
-typing_extensions==4.3.0
-urllib3==1.26.10
-Werkzeug==2.1.2
-wrapt==1.14.1
-yarg==0.1.9
-zipp==3.8.1
-zope.event==4.5.0
-zope.interface==5.4.0
