--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 feat==1.0.5
 Flask==2.1.3
 Flask_SocketIO==5.2.0
@@ -8,3 +9,6 @@ python_engineio==4.3.3
 gevent==21.12.0
 gevent-websocket==0.10.1
 gunicorn==20.1.0
+torch==1.12.0+cpu
+torchvision==0.13.0+cpu
+opencv-contrib-python-headless
