--- a/web-interface/requirements.txt
+++ b/web-interface/requirements.txt
@@ -3,6 +3,7 @@ feat==1.0.5
 Flask==2.1.3
 Flask_SocketIO==5.2.0
 numpy==1.23.1
+opencv-contrib-python-headless
 Pillow==9.2.0
 py_feat==0.4.0
 python_engineio==4.3.3
